--- a/CarMarketplace.Web/Views/Home/Index.cshtml
+++ b/CarMarketplace.Web/Views/Home/Index.cshtml
@@ -15,8 +15,7 @@
     </div>
     <div class="carousel-inner carousel-fade">
         <div class="carousel-item active">
-            <a href="">
-                @*to do!!!!!!*@
+            <a asp-controller="Catalog" asp-action="Results" asp-route-group="german">
                 <img src="/img/German-group-banner.png" class="d-block w-100 rounded img-fluid banner" alt="...">
             </a>
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
@@ -26,8 +25,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <a href="">
-                @*to do!!!!!!*@
+            <a asp-controller="Catalog" asp-action="Results" asp-route-group="japan">
                 <img src="~/img/Japan-group-banner.png" class="d-block w-100 rounded img-fluid banner" alt="...">
             </a>
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
@@ -37,8 +35,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <a>
-                @*to do!!!!!!*@
+            <a asp-controller="Catalog" asp-action="Results" asp-route-group="italian">
                 <img src="~/img/Italy-group-banner.png" class="d-block w-100 rounded img-fluid banner" alt="...">
             </a>
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
