New database Entity Logic for liked posts almost done!

--- a/CarMarketplace.Web/Views/Catalog/Search.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Search.cshtml
@@ -50,8 +50,8 @@
             </div>
             <div class="form-group col-4  border-left border-start border-3">
                 <label for="fromEuro" class="form-label mt-2 fs-4">Euro:</label>
-                <input type="number" id="fromEuro" asp-for="fromEuro" class="form-control" min="0" placeholder="e.g., 2, 3">
-                <span asp-validation-for="fromEuro" class="text-danger"></span>
+                <input type="number" id="fromEuro" asp-for="FromEuro" class="form-control" min="0" placeholder="e.g., 2, 3">
+                <span asp-validation-for="FromEuro" class="text-danger"></span>
             </div>
         </div>
         <div class="row mt-3 col-md-13 d-flex">
