--- a/CarMarketplace.Web/Views/User/Favourites.cshtml
+++ b/CarMarketplace.Web/Views/User/Favourites.cshtml
@@ -1,7 +1,4 @@
-﻿@using System.Security.Claims;
-@model ICollection<SalePostViewModel>
-
-@inject IUserService UserService;
+﻿@model ICollection<SalePostViewModel>
 
 @{
     ViewData["CloudDomain"] = "https://res.cloudinary.com/carmarketplace/image/upload/";
@@ -34,7 +31,7 @@
                         <div class="row">
                             <h3 class="card-title float-start col-10"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
                             <div class="col-2">
-                                <button class="heart-button" onclick="toggleHeart(this, '@Html.Raw(post.Id)')">
+                                <button class="heart-button" onclick="toggleHeart(this)">
                                     <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C15.09 3.81 16.76 3 18.5 3 21.58 3 24 5.42 24 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" /></svg>
                                 </button>
                             </div>
@@ -77,7 +74,7 @@
                         <div class="row">
                             <h3 class="card-title float-start col-10"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
                             <div class="col-2">
-                                <button class="heart-button" onclick="toggleHeart(this, @post.Id">
+                                <button class="heart-button" onclick="toggleHeart(this)">
                                     <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C15.09 3.81 16.76 3 18.5 3 21.58 3 24 5.42 24 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" /></svg>
                                 </button>
                             </div>
@@ -137,26 +134,10 @@
         }
 </style>
 <script>
-    function toggleHeart(button, postId) {
+    function toggleHeart(button) {
         button.classList.toggle('active');
-        let userId = '@User.FindFirstValue(ClaimTypes.NameIdentifier)';
-        console.log('You are in');
-
-        const data = {
-            postId: postId,
-            userId: userId
-        };
-
-        console.log(data);
-
-        // Make AJAX request
-        $.ajax({
-            contentType: "application/json",
-            type: 'POST',
-            url: '/User/AddFavourite',
-            data: JSON.stringify(data)
-        });
     }
 </script>
+
 
 
