--- a/CarMarketplace.Web/Views/Shared/_Layout.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_Layout.cshtml
@@ -55,7 +55,7 @@
                         {
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Liked">Liked</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Favourites">Favourites</a>
                             </li>
                         }
                     </ul>
