--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CarMarketplace.Web;
 @using System.Web.Helpers;
+@using System.Security.Claims;
+@using CarMarketplace.Data.Models;
+@using Microsoft.AspNetCore.Identity;
 @using CarMarketplace.Web.ViewModels;
 @using CarMarketplace.Services.Contracts;
 @using CarMarketplace.Web.ViewModels.Seller;
