--- a/CarMarketplace.Web/Views/SalePost/Details.cshtml
+++ b/CarMarketplace.Web/Views/SalePost/Details.cshtml
@@ -1,13 +1,19 @@
-﻿@using CarMarketplace.Data.Models;
-@using Microsoft.AspNetCore.Identity;
-@model SalePostViewModel
+﻿@model SalePostViewModel
+
+@inject SignInManager<ApplicationUser> SignInManager
+@inject IUserService UserService;
+
 @{
+    ICollection<Guid> userFavourites = new HashSet<Guid>();
+    bool isLogged = SignInManager.IsSignedIn(User);
+    if (isLogged)
+    {
+        userFavourites = await UserService.GetUserFavouritePostIdsAsync(User.FindFirstValue(ClaimTypes.NameIdentifier));
+    }
     ViewData["CloudDomain"] = "https://res.cloudinary.com/carmarketplace/image/upload/";
     var image = "";
     var imagePublicId = "";
 }
-
-@inject SignInManager<ApplicationUser> SignInManager
 
 <div class="container mt-5">
     <div class="row">
@@ -43,9 +49,29 @@
                 var displacement = (@Model.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
             }
             <h2>Manufacturer: <strong>@Model.Car.Make.Name</strong></h2>
-            <p class="fs-2">Car Model: <strong>@Model.Car.Model.ModelName</strong></p>
+            <h2>Car Model: <strong>@Model.Car.Model.ModelName</strong></h2>
             <hr />
-            <p class="fs-3">Year: <span class="fst-italic">@Model.Car.Year</span></p>
+            <div class="row">
+                <span class="fs-3 col-10">Year: <span class="fst-italic">@Model.Car.Year</span></span>
+                @if (isLogged)
+                {
+                    <div class="col-2 text-end">
+                        @if (userFavourites.Contains(Model.Id))
+                        {
+                            <button class="heart-button active bg-light" onclick="toggleHeart(this, '@Html.Raw(Model.Id)')">
+                                <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C15.09 3.81 16.76 3 18.5 3 21.58 3 24 5.42 24 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" /></svg>
+                            </button>
+                        }
+                        else
+                        {
+                            <button class="heart-button bg-light" onclick="toggleHeart(this, '@Html.Raw(Model.Id)')">
+                                <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C15.09 3.81 16.76 3 18.5 3 21.58 3 24 5.42 24 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" /></svg>
+                            </button>
+                        }
+                    </div>
+                }
+            </div>
+            <p></p>
             <p class="fs-3">Color: <span class="fst-italic">@Model.Car.Color.Name</span></p>
             <p class="fs-3">Price: <span class="fst-italic">@Model.Price BGN</span></p>
             <p class="fs-3">Engine: <span class="fst-italic">@displacement @Model.Car.Engine.FuelType</span></p>
@@ -60,7 +86,10 @@
 
             </p>
             <hr />
-            <p class="fs-4 fst-italic">@Model.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</p>
+            <div class="row d-inline">
+                <span class="fs-4 fst-italic text-start float-start col-6">@Model.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                <span class="text-end float-end fst-italic col-3 fs-4 fw-bolder" id="like-span">Likes: @Model.Likes</span>
+            </div>
         </div>
     </div>
     <div class="row mt-3">
@@ -131,4 +160,52 @@
             $(".owl-carousel").trigger('to.owl.carousel', position);
         };
     </script>
+
+    <script>
+        function toggleHeart(button, postId) {
+            button.classList.toggle('active');
+
+            const data = {
+                postId: postId,
+            };
+
+            if (!button.classList.contains('active')) {
+
+                $.ajax({
+                    contentType: "application/json",
+                    type: 'POST',
+                    url: '/User/RemoveFavourite',
+                    data: JSON.stringify(data),
+                    success: function () {
+
+                        $.ajax({
+                            contentType: "application/json",
+                            type: 'POST',
+                            url: '/SalePost/DetailsReload',
+                            data: JSON.stringify(data)
+                        });
+                    }
+                });
+            }
+            else {
+
+                $.ajax({
+                    contentType: "application/json",
+                    type: 'POST',
+                    url: '/User/AddFavourite',
+                    data: JSON.stringify(data),
+                    success: function (){
+
+                        $.ajax({
+                            contentType: "application/json",
+                            type: 'POST',
+                            url: '/SalePost/DetailsReload',
+                            data: JSON.stringify(data)
+                        });
+                    }
+                });
+            }
+        }
+    </script>
+
 }
