--- a/CarMarketplace.Web/Views/Seller/UserPosts.cshtml
+++ b/CarMarketplace.Web/Views/Seller/UserPosts.cshtml
@@ -25,8 +25,8 @@
             {
                 imageSrc = ViewData["CloudDomain"] + post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
 
-                <div class="col-md-4 text-decoration-none">
-                    <div class="card mb-4">
+                <div class="col-md-4">
+                    <div class="card mb-4 p-2">
                         <img src="@imageSrc" class="card-img-top" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
                         <div class="card-body">
                             <h3 class="card-title"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
