--- a/CarMarketplace.Web/Views/User/Favourites.cshtml
+++ b/CarMarketplace.Web/Views/User/Favourites.cshtml
@@ -2,142 +2,90 @@
 
 @{
     ViewData["CloudDomain"] = "https://res.cloudinary.com/carmarketplace/image/upload/";
-    ViewData["Title"] = "Latest posts";
+    ViewData["Title"] = "My Liked posts";
     var imageSrc = "";
 }
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h1 class="my-4">@ViewData["Title"]</h1>
-        </div>
-        <div class="col-md-6 my-4 align-items-middle">
-            <div class="d-grid col-3 mx-auto float-end mt-2">
-                <a asp-controller="Catalog" asp-action="Search" class="btn btn-primary btn-lg">Search</a>
-            </div>
-        </div>
+    <div class="row text-center">
+        <h1 class="my-4">@ViewData["Title"]</h1>
     </div>
 
-    <div class="row">
-        @foreach (var post in Model.Take(3))
-        {
-            imageSrc = ViewData["CloudDomain"] + post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <a asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id" class="text-decoration-none">
-                        <img src="@imageSrc" class="card-img" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
-                    </a>
-                    <div class="card-body">
-                        <div class="row">
-                            <h3 class="card-title float-start col-10"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
-                            <div class="col-2">
-                                <button class="heart-button" onclick="toggleHeart(this)">
-                                    <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C15.09 3.81 16.76 3 18.5 3 21.58 3 24 5.42 24 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" /></svg>
-                                </button>
+    @for (int i = 0; i < Model.Count; i += 3)
+    {
+        <div class="row">
+            @foreach (var post in Model.Skip(i).Take(3))
+            {
+                imageSrc = ViewData["CloudDomain"] + post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
+                <div class="col-md-4">
+                    <div class="card mb-4 p-2 shadow">
+                        <a asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id" class="text-decoration-none">
+                            <img src="@imageSrc" class="card-img" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
+                        </a>
+                        <div class="card-body">
+                            <div class="row">
+                                <h3 class="card-title col-10"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
+                                <div class="col-2">
+                                    <button class="heart-button active" onclick="toggleHeart(this, '@Html.Raw(post.Id)')">
+                                        <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C15.09 3.81 16.76 3 18.5 3 21.58 3 24 5.42 24 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" /></svg>
+                                    </button>
+                                </div>
                             </div>
-                        </div>
-                        <hr>
-                        <span class="card-text fs-3">
-                            Price: <span class="fst-italic">@post.Price</span><span> BGN</span>
-                        </span>
-                        <br>
-                        <span class="card-text fs-3">Year: <span class="fst-italic">@post.Car.Year</span></span>
-                        <br>
-                        @{
-                            var displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
-                        }
-                        <span class="card-text fs-3 fst-italic">@displacement @post.Car.Engine.FuelType @post.Car.Engine.Horsepower<span>hp</span></span>
-                        <p class="card-text fs-3 fst-italic">
-                            @post.Car.Province.ProvinceName
-                            @if (post.Car.City != null)
-                            {
-                                <span class="fs-3">@post.Car.City</span>
+                            <hr>
+                            <span class="card-text fs-3">
+                                Price: <span class="fst-italic">@post.Price</span><span> BGN</span>
+                            </span>
+                            <br>
+                            <span class="card-text fs-3">Year: <span class="fst-italic">@post.Car.Year</span></span>
+                            <br>
+                            @{
+                                var displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
                             }
-                        </p>
-                        <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
-                        <br>
+                            <span class="card-text fs-3 fst-italic">@displacement @post.Car.Engine.FuelType @post.Car.Engine.Horsepower<span>hp</span></span>
+                            <p class="card-text fs-3 fst-italic">
+                                @post.Car.Province.ProvinceName
+                                @if (post.Car.City != null)
+                                {
+                                    <span class="fs-3">@post.Car.City</span>
+                                }
+                            </p>
+                            <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
+                            <br>
+                        </div>
                     </div>
                 </div>
-            </div>
-        }
-    </div>
-    <div class="row">
-        @foreach (var post in Model.Skip(3).Take(3))
-        {
-            imageSrc = ViewData["CloudDomain"] + post.ImageUrls.Split(", ", StringSplitOptions.RemoveEmptyEntries).First();
-            <div class="col-md-4">
-                <div class="card mb-4">
-                    <a asp-controller="SalePost" asp-action="Details" asp-route-id="@post.Id" class="text-decoration-none">
-                        <img src="@imageSrc" class="card-img" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
-                    </a>
-                    <div class="card-body">
-                        <div class="row">
-                            <h3 class="card-title float-start col-10"><strong>@post.Car.Make.Name @post.Car.Model.ModelName</strong></h3>
-                            <div class="col-2">
-                                <button class="heart-button" onclick="toggleHeart(this)">
-                                    <svg class="heart-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C15.09 3.81 16.76 3 18.5 3 21.58 3 24 5.42 24 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z" /></svg>
-                                </button>
-                            </div>
-                        </div>
-                        <hr>
-                        <span class="card-text fs-3">
-                            Price: <span class="fst-italic">@post.Price</span><span> BGN</span>
-                        </span>
-                        <br>
-                        <span class="card-text fs-3">Year: <span class="fst-italic">@post.Car.Year</span></span>
-                        <br>
-                        @{
-                            var displacement = (post.Car.Engine.Displacement / 100).ToString().Insert(1, ".") + "l";
-                        }
-                        <span class="card-text fs-3 fst-italic">@displacement @post.Car.Engine.FuelType @post.Car.Engine.Horsepower<span>hp</span></span>
-                        <p class="card-text fs-3 fst-italic">
-                            @post.Car.Province.ProvinceName
-                            @if (post.Car.City != null)
-                            {
-                                <span class="fs-3">@post.Car.City</span>
-                            }
-                        </p>
-                        <span class="card-text fs-4 fst-italic">@post.PublishDate.ToString("HH:mm:ss dd/MM/yyyy")</span>
-                        <br>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
+            }
+        </div>
+    }
 </div>
 
-<style>
-    .heart-button {
-        display: inline-block;
-        background-color: transparent;
-        border: none;
-        box-shadow: none;
-        padding: 5px;
-        cursor: pointer;
-        transition: border-color 0.3s, background-color 0.3s;
-    }
-
-    .heart-icon {
-        width: 35px;
-        height: 35px;
-        fill: black;
-        transition: fill 0.3s;
-    }
-
-    .heart-button.active {
-        border-color: white;
-        background-color: white;
-    }
-
-        .heart-button.active .heart-icon {
-            fill: red;
-        }
-</style>
 <script>
-    function toggleHeart(button) {
+    function toggleHeart(button, postId) {
         button.classList.toggle('active');
+
+        const data = {
+            postId: postId,
+        };
+
+        if (!button.classList.contains('active')) {
+
+            $.ajax({
+                contentType: "application/json",
+                type: 'POST',
+                url: '/User/RemoveFavourite',
+                data: JSON.stringify(data)
+            });
+        }
+        else {
+
+            $.ajax({
+                contentType: "application/json",
+                type: 'POST',
+                url: '/User/AddFavourite',
+                data: JSON.stringify(data)
+            });
+        }
     }
 </script>
-
 
 
