Started using automapper

--- a/CarMarketplace.Web/Views/_ViewImports.cshtml
+++ b/CarMarketplace.Web/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Identity;
 @using CarMarketplace.Web.ViewModels;
 @using CarMarketplace.Services.Contracts;
+@using CarMarketplace.Web.ViewModels.Common;
 @using CarMarketplace.Web.ViewModels.Seller;
 @using CarMarketplace.Web.ViewModels.Catalog;
 @using CarMarketplace.Web.ViewModels.SalePost;
